check all shell directories

BUG: 348056
REVIEW: 123870